Created header/footer. Filled home page. Added common data.

--- a/Angular/FCSeafood/src/app/modules/components/header/header.component.scss
+++ b/Angular/FCSeafood/src/app/modules/components/header/header.component.scss
@@ -1,4 +1,10 @@
 header {
-  height: 75px;
+  height: 120px;
   background-color: #197275;
+
+  .header-block {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+  }
 }
