--- a/Angular/FCSeafood/src/styles.scss
+++ b/Angular/FCSeafood/src/styles.scss
@@ -1,9 +1,10 @@
-html, body {
-  height: 100%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  scroll-behavior: smooth;
+  color: white;
 }
