--- a/Angular/FCSeafood/src/app/modules/components/footer/footer.component.html
+++ b/Angular/FCSeafood/src/app/modules/components/footer/footer.component.html
@@ -1,1 +1,34 @@
-<p>footer works!</p>
+<footer class="flex align-items-center px-8">
+  <div class="flex justify-content-between align-items-center w-full">
+    <div class="flex flex-wrap justify-content-center align-items-center">
+      <img ngSrc="assets/FCSeafood_Short_Logo.svg" height="97" width="101" alt="">
+      <div class="flex flex-column ml-5  my-2">
+        <span class="my-1">+380 (48) 123-45-67</span>
+        <span class="my-1">+380 (67) 272-59-00</span>
+        <span class="my-1">freshcatch@gmail.com</span>
+      </div>
+      <div class="flex flex-column ml-8 my-2">
+        <a class="mb-1">Availability of documents</a>
+        <a class="mb-1">Shipping info</a>
+        <a class="mb-1">About us</a>
+        <a class="mb-1">Reviews</a>
+      </div>
+      <div class="flex flex-column ml-8 my-2">
+        <a class="mb-1">Terms and Conditions</a>
+        <a class="mb-1">Privacy Policy</a>
+        <a class="mb-1">Complaints</a>
+        <a class="mb-1">Contract withdrawal</a>
+      </div>
+    </div>
+    <div>
+      <div class="flex flex-wrap justify-content-center align-items-center social-group">
+        <img ngSrc="assets/icons/twitter.svg" height="48" width="54" alt="">
+        <img ngSrc="assets/icons/telegram.svg" height="48" width="54" alt="">
+        <img ngSrc="assets/icons/facebook.svg" height="48" width="54" alt="">
+        <img ngSrc="assets/icons/youtube.svg" height="48" width="54" alt="">
+        <img ngSrc="assets/icons/instagram.svg" height="48" width="54" alt="">
+      </div>
+      <span style="position: absolute; margin-top: 20px; right: 100px">@All rights reserved</span>
+    </div>
+  </div>
+</footer>
