--- a/Angular/FCSeafood/src/app/modules/components/header/header.component.html
+++ b/Angular/FCSeafood/src/app/modules/components/header/header.component.html
@@ -1,7 +1,18 @@
 <header class="flex flex-row justify-content-around w-full">
 
-  <div class="w-3 bg-purple-500 text-white font-bold text-center p-4 border-round">1</div>
-  <div class="w-5 bg-purple-500 text-white font-bold text-center p-4 border-round mx-4">2</div>
-  <div class="w-2 bg-purple-500 text-white font-bold text-center p-4 border-round">3</div>
+  <div class="header-block w-3 p-4">
+    <img ngSrc="assets/FCSeafood_Logo.svg" alt="" height="61" width="202">
+  </div>
+
+  <div class="header-block w-5 p-4">
+
+  </div>
+
+  <div class="header-block w-2 p-4">
+    <mat-icon class="mx-1">public</mat-icon>
+    <mat-icon class="mx-1">search</mat-icon>
+    <mat-icon class="mx-1">portrait</mat-icon>
+    <mat-icon class="mx-1">shopping_basket</mat-icon>
+  </div>
 
 </header>
