--- a/Angular/FCSeafood/src/app/modules/pages/home/product-type-card/product-type-card.component.html
+++ b/Angular/FCSeafood/src/app/modules/pages/home/product-type-card/product-type-card.component.html
@@ -1,5 +1,5 @@
 <button mat-button class="product-type-card border-transparent border-round-xl mx-3 my-3"
         style="background-size: cover;"
-        [style.background]="'url(' + category.imagePath + ') no-repeat center center'">
-  <span class="uppercase type-text">{{category.name}}</span>
+        [style.background]="'url(' + categoryTModel.imagePath + ') no-repeat center center'">
+  <span class="uppercase type-text">{{categoryTModel.name}}</span>
 </button>
