Split home page to components

--- a/Angular/FCSeafood/src/app/modules/pages/home/about-us-section/about-us-card/about-us.card.component.html
+++ b/Angular/FCSeafood/src/app/modules/pages/home/about-us-section/about-us-card/about-us.card.component.html
@@ -1,5 +1,5 @@
 <mat-card class="why-us-card">
-  <img>
+  <img alt="" src="">
   <div class="title">Benefit #1</div>
   <div class="description">
     Lorem ipsum dolor sit amet, consectetur
