--- a/Angular/FCSeafood/src/app/modules/pages/home/home.component.html
+++ b/Angular/FCSeafood/src/app/modules/pages/home/home.component.html
@@ -1,88 +1,13 @@
-<section class="section-main">
-  <div class="h-full flex flex-column justify-content-center align-items-start ml-8">
-    <h1 class="uppercase my-3 text-4xl">Fresh Catch</h1>
-    <span class="text-2xl">Instantly upgrade your culinary<br/>game with our seafood</span>
+<home-main-section></home-main-section>
 
-    <button mat-raised-button color="primary" class="mt-6 text-lg p-4">Make an order</button>
-  </div>
-</section>
+<home-category-section></home-category-section>
 
-<section class="section-products">
-  <div class="h-full flex flex-column align-items-center">
-    <h4 class="uppercase my-6 text-4xl">Products</h4>
-    <div class="flex justify-content-center flex-wrap">
-      <app-product-type-card [categoryTModel]="categoryTModel" *ngFor="let categoryTModel of categoryTListModel"></app-product-type-card>
-    </div>
-    <button mat-raised-button class="text-lg p-4 my-3">See more</button>
-  </div>
-</section>
+<home-first-purchase-section></home-first-purchase-section>
 
-<section class="section-first-purchase">
-  <div class="h-full flex flex-column align-items-center">
-    <span class="uppercase mt-8 text-4xl">First purchase?</span>
-    <span class="my-7 text-xl">
-      Be sure to check out all of our wide range of seafood products available. No matter what type of fish<br/>
-      your heart desires, from deliciously exotic black sea bass to wild caught salmon, we have something<br/>
-      for everyone that's sure to make your meal sparkle! Whether you need just one portion for a quick<br/>
-      lunch or enough to feed your whole family - plus leftovers, too! - Fresh Catch has you covered.
-    </span>
-  </div>
-</section>
+<home-about-us-section></home-about-us-section>
 
-<section class="section-why-us">
-  <div class="h-full flex flex-column align-items-center">
-    <h4 class="uppercase my-6 text-4xl text-color">Products</h4>
-    <div class="flex flex-wrap justify-content-center why-us-cards">
-      <app-why-us-card class="m-4"></app-why-us-card>
-      <app-why-us-card class="m-4"></app-why-us-card>
-      <app-why-us-card class="m-4"></app-why-us-card>
-      <app-why-us-card class="m-4"></app-why-us-card>
-      <app-why-us-card class="m-4"></app-why-us-card>
-      <app-why-us-card class="m-4"></app-why-us-card>
-    </div>
-  </div>
-</section>
+<home-offers-section></home-offers-section>
 
-<section class="section-best-offers">
-  <div class="h-full flex flex-column align-items-center">
-    <h4 class="uppercase my-6 text-4xl">Best offers</h4>
-    <span class="text-2xl">-7% OFF until the end of April</span>
-    <div class="m-4" style="height: 704px; width: 85%; background-color: gray">Temp div</div>
-  </div>
-</section>
+<home-suppliers-section></home-suppliers-section>
 
-<section class="section-our-suppliers">
-  <div class="h-full flex flex-column align-items-center">
-    <h4 class="uppercase my-6 text-4xl text-color">Products</h4>
-    <div class="flex flex-wrap justify-content-center why-us-cards mb-6">
-      <button mat-raised-button color="primary" class="text-lg p-4 m-2">China</button>
-      <button mat-raised-button color="primary" class="text-lg p-4 m-2">Argentina</button>
-      <button mat-raised-button color="primary" class="text-lg p-4 m-2">Norway</button>
-      <button mat-raised-button color="primary" class="text-lg p-4 m-2">Ukraine</button>
-      <button mat-raised-button color="primary" class="text-lg p-4 m-2">Spain</button>
-      <button mat-raised-button color="primary" class="text-lg p-4 m-2">Vietnam</button>
-    </div>
-  </div>
-</section>
-
-<section class="section-description">
-  <div class="h-full flex flex-column align-items-center">
-    <h4 class="uppercase my-6 text-4xl">Fresh catch</h4>
-    <div class="flex flex-wrap justify-content-center why-us-cards w-10 text-lg mb-7">
-      When it comes to seafood, nothing beats fresh! Eating fish and other sea creatures can be incredibly rewarding -
-      not only are they packed full of essential nutrients like omega-3 fatty acids and vitamin D that help keep you
-      healthy, but the flavor is out of this world. Plus, who doesn’t love taking a vacation at sea? Nothing beats the
-      feeling of being on a boat, taking in all the sights and sounds around you - and then sitting down to enjoy a
-      delicious seafood dinner. And let me tell you, there's nothing quite like tasting freshly caught fish or seafood
-      prepared with tender loving care. Whether it's grilled, smoked, or fried - it can always put a smile on your face!
-      So, if you're looking for something nutritious and tasty to try out, don't hesitate to go for some seafood! You
-      won't regret it.
-      <br/><br/>
-      Enjoy the fresh taste of seafood with no hassle. Fresh Catch offers nationwide delivery of the highest quality
-      fish and seafood, straight to your door.
-      <br/><br/>
-      All fresh catch is subject to urgent deep freezing and is sent to customers in special thermal packaging that can
-      maintain temperature for 48 hours.
-    </div>
-  </div>
-</section>
+<home-description-section></home-description-section>
