--- a/Angular/FCSeafood/src/styles.scss
+++ b/Angular/FCSeafood/src/styles.scss
@@ -6,5 +6,16 @@
 }
 
 body {
-  color: white;
+  --primary-color: #197275;
+  --primary-darker-color: #2D3D3D;
+  --primary-lighter-color: #538487;
+  --text-primary-color: #FFFFFF;
+  --text-color: #FFFFFF;
+  --text-color-secondary: #272727;
+
+  color: var(--text-color);
+}
+
+button {
+  background-color: var(--primary-color) !important;
 }
