Configure theme, implement login popup

--- a/Angular/FCSeafood/src/app/modules/components/footer/footer.component.html
+++ b/Angular/FCSeafood/src/app/modules/components/footer/footer.component.html
@@ -22,11 +22,11 @@
     </div>
     <div>
       <div class="flex flex-wrap justify-content-center align-items-center social-group">
-        <img ngSrc="assets/icons/twitter.svg" height="48" width="54" alt="">
-        <img ngSrc="assets/icons/telegram.svg" height="48" width="54" alt="">
-        <img ngSrc="assets/icons/facebook.svg" height="48" width="54" alt="">
-        <img ngSrc="assets/icons/youtube.svg" height="48" width="54" alt="">
-        <img ngSrc="assets/icons/instagram.svg" height="48" width="54" alt="">
+        <img ngSrc="assets/icons/social/twitter.svg" height="48" width="54" alt="">
+        <img ngSrc="assets/icons/social/telegram.svg" height="48" width="54" alt="">
+        <img ngSrc="assets/icons/social/facebook.svg" height="48" width="54" alt="">
+        <img ngSrc="assets/icons/social/youtube.svg" height="48" width="54" alt="">
+        <img ngSrc="assets/icons/social/instagram.svg" height="48" width="54" alt="">
       </div>
       <span style="position: absolute; margin-top: 20px; right: 100px">@All rights reserved</span>
     </div>
