--- a/Angular/FCSeafood/src/app/modules/components/header/header.component.html
+++ b/Angular/FCSeafood/src/app/modules/components/header/header.component.html
@@ -8,11 +8,10 @@
 
   </div>
 
-  <div class="header-block w-2 p-4">
-    <mat-icon class="mx-1">public</mat-icon>
-    <mat-icon class="mx-1">search</mat-icon>
-    <mat-icon class="mx-1">portrait</mat-icon>
-    <mat-icon class="mx-1">shopping_basket</mat-icon>
+  <div class="header-block w-2 p-4" *ngIf="!authStateService.IsAuthorized">
+    <button mat-button class="min-w-0 p-1" matTooltip="Accounts" (click)="openSignInPopup()">
+      <img ngSrc="assets/icons/account.svg" height="34" width="34" alt="">
+    </button>
   </div>
 
 </header>
