--- a/Angular/FCSeafood/src/app/modules/pages/home/main-section/main.section.component.html
+++ b/Angular/FCSeafood/src/app/modules/pages/home/main-section/main.section.component.html
@@ -3,6 +3,6 @@
     <h1 class="uppercase my-3 text-4xl">Fresh Catch</h1>
     <span class="text-2xl">Instantly upgrade your culinary<br/>game with our seafood</span>
 
-    <button mat-raised-button color="primary" class="mt-6 text-lg p-4">Make an order</button>
+    <button (click)="routeHelper.goToCategory()" mat-raised-button color="primary" class="mt-6 text-lg p-4">Make an order</button>
   </div>
 </section>
