Added event on click card

--- a/Angular/FCSeafood/src/app/modules/pages/home/category-section/category-type-card/category-type.card.component.html
+++ b/Angular/FCSeafood/src/app/modules/pages/home/category-section/category-type-card/category-type.card.component.html
@@ -1,4 +1,4 @@
-<button mat-button class="product-type-card border-transparent border-round-xl mx-3 my-3"
+<button (click)="routeHelper.goToSubCategory(categoryTModel.type)" mat-button class="product-type-card border-transparent border-round-xl mx-3 my-3"
         style="background-size: cover;"
         [style.background]="'url(' + categoryTModel.imagePath + ') no-repeat center center'">
   <span class="uppercase type-text">{{categoryTModel.name}}</span>
