--- a/Angular/FCSeafood/src/app/modules/pages/shop/shop-content/category/category-type-card/category-type-card.component.html
+++ b/Angular/FCSeafood/src/app/modules/pages/shop/shop-content/category/category-type-card/category-type-card.component.html
@@ -1,4 +1,4 @@
-<button (click)="routeHelper.goToSubCategory(categoryTModel.type)" mat-button class="category-type-card border-transparent border-round-xl mx-3 my-3">
+<button (click)="routeHelper.goToSubcategory(categoryTModel.type)" mat-button class="category-type-card border-transparent border-round-xl mx-3 my-3">
   <div>
     <span class="uppercase type-text">{{categoryTModel.name}}</span>
   </div>
