--- a/Angular/FCSeafood/src/app/modules/pages/shop/shop-content/subcategory/subcategory-type-card/subcategory-type-card.component.html
+++ b/Angular/FCSeafood/src/app/modules/pages/shop/shop-content/subcategory/subcategory-type-card/subcategory-type-card.component.html
@@ -1,7 +1,9 @@
 <button mat-button class="subcategory-type-card border-transparent border-round-xl mx-3 my-3">
+
   <div>
     <span class="uppercase type-text">{{subcategoryTModel.name}}</span>
   </div>
 
-  <img src="" alt="">
+  <img src="{{subcategoryTModel.imagePath}}" alt="">
+
 </button>
