--- a/Angular/FCSeafood/src/app/modules/pages/shop/shop.component.html
+++ b/Angular/FCSeafood/src/app/modules/pages/shop/shop.component.html
@@ -5,6 +5,7 @@
   </div>
 
   <div class="content">
-    <app-shop-content class="w-full"></app-shop-content>
+    <app-shop-content></app-shop-content>
   </div>
+
 </div>
