Added main menu to header

--- a/Angular/FCSeafood/src/app/modules/components/header/header.component.html
+++ b/Angular/FCSeafood/src/app/modules/components/header/header.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="header-block w-5 p-4">
-
+    <header-main-menu></header-main-menu>
   </div>
 
   <div class="header-block w-2 p-4" *ngIf="!authStateService.IsAuthorized">
