--- a/Angular/FCSeafood/src/styles.scss
+++ b/Angular/FCSeafood/src/styles.scss
@@ -12,6 +12,11 @@
   scroll-behavior: smooth;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 // Light Theme Text
 $dark-text: #000000;
 $dark-primary-text: rgba($dark-text, 0.87);
