Configure route, fixed unloaded category and subcategory

--- a/Angular/FCSeafood/src/app/modules/components/header/header.component.html
+++ b/Angular/FCSeafood/src/app/modules/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="flex flex-row justify-content-around w-full">
 
   <div class="header-block w-3 p-4">
-    <img (click)="this.routeHelper.goToHome()" ngSrc="assets/FCSeafood_Logo.svg" alt="" height="61" width="202" class="cursor-pointer">
+    <img (click)="this.routeHelper.goToHome()" src="assets/FCSeafood_Logo.svg" alt="" height="61" width="202" class="cursor-pointer">
   </div>
 
   <div class="header-block w-5 p-4">
