--- a/Angular/FCSeafood/src/app/modules/pages/shop/shop-content/subcategory/subcategory-type-card/subcategory-type-card.component.html
+++ b/Angular/FCSeafood/src/app/modules/pages/shop/shop-content/subcategory/subcategory-type-card/subcategory-type-card.component.html
@@ -1,4 +1,4 @@
-<button (click)="routeHelper.goToItems(subcategoryTModel.type)" mat-button class="subcategory-type-card border-transparent border-round-xl mx-3 my-3">
+<button (click)="routeHelper.goToItems()" mat-button class="subcategory-type-card border-transparent border-round-xl mx-3 my-3">
 
   <div>
     <span class="uppercase type-text">{{subcategoryTModel.name}}</span>
