Added item cart

--- a/Angular/FCSeafood/src/styles.scss
+++ b/Angular/FCSeafood/src/styles.scss
@@ -153,6 +153,7 @@ body {
   --text-color: #FFFFFF;
   --text-color-secondary: #272727;
 
+  --gray-color: #424242;
   --grafit-color: #272727;
   --bright-grey-color: #a3a3a3;
   color: var(--text-color);
