--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-list.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-list.component.html
@@ -1,3 +1,3 @@
 <div class="flex flex-wrap">
-  <shop-item-card class="m-3"></shop-item-card>
+  <shop-item-card *ngFor="let itemModel of itemModels" [itemModel]="itemModel" class="m-3"></shop-item-card>
 </div>
