--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-list.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-list.component.html
@@ -1,3 +1,12 @@
-<div class="flex flex-wrap">
-  <shop-item-card *ngFor="let itemModel of itemModels" [itemModel]="itemModel" class="m-3"></shop-item-card>
+<div class="flex">
+
+  <div class="left-panel">
+    <shop-filter (applyEvent)="applyFilters()"></shop-filter>
+  </div>
+
+  <div class="flex flex-wrap">
+    <shop-item-card *ngFor="let itemModel of itemModels" [itemModel]="itemModel" class="m-3"></shop-item-card>
+  </div>
+
 </div>
+
