--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-card/item.card.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-card/item.card.html
@@ -5,7 +5,7 @@
   <span class="name">{{itemModel.name}}</span>
 
   <div class="payment-block">
-    <span>Price: {{itemModel.price.price}} $/kg</span>
+    <span>Price: {{itemModel.price}} $/kg</span>
     <p-button pTooltip="Add to compare filled" styleClass="p-button-text">
       <img alt="" ngSrc="assets/icons/filled-compare.svg" height="20" width="24">
     </p-button>
