--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-list.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-list.component.html
@@ -4,8 +4,10 @@
     <shop-filter (applyEvent)="applyFilters()"></shop-filter>
   </div>
 
-  <div class="flex flex-wrap">
-    <shop-item-card *ngFor="let itemModel of itemModels" [itemModel]="itemModel" class="m-3"></shop-item-card>
+  <div class="flex justify-content-center w-full">
+    <div class="flex flex-wrap justify-content-center w-full max-3-block">
+      <shop-item-card *ngFor="let itemModel of itemModels" [itemModel]="itemModel" class="m-3"></shop-item-card>
+    </div>
   </div>
 
 </div>
