--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-list.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-list.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="flex justify-content-center w-full">
-    <div class="flex flex-wrap justify-content-start w-full max-3-block">
+    <div class="flex flex-wrap justify-content-center w-full max-3-block">
       <shop-item-card *ngFor="let itemModel of itemModels" [itemModel]="itemModel" class="m-3"></shop-item-card>
     </div>
   </div>
