--- a/FCSeafood-Angular/src/styles.scss
+++ b/FCSeafood-Angular/src/styles.scss
@@ -228,6 +228,7 @@ img, svg, video {
   --gray-color: #424242;
   --grafit-color: #272727;
   --bright-grey-color: #a3a3a3;
+  --light-grey-color: #d9d9d9;
   color-scheme: light;
 }
 
