--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-list.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item-list/item-list.component.html
@@ -6,7 +6,7 @@
 
   <div class="flex justify-content-center w-full">
     <div class="flex flex-wrap justify-content-center w-full max-3-block">
-      <shop-item-card *ngFor="let itemModel of itemModels" [itemModel]="itemModel" class="m-3"></shop-item-card>
+      <shop-item-card *ngFor="let item of itemModels" [item]="item" class="m-3"></shop-item-card>
     </div>
   </div>
 
