Implement order state. Fix some little bag. Refactored

--- a/FCSeafood-Angular/src/app/modules/components/popups/cart/cart.popup.html
+++ b/FCSeafood-Angular/src/app/modules/components/popups/cart/cart.popup.html
@@ -11,24 +11,24 @@
 
     <p-divider styleClass="border-white bg-white"></p-divider>
 
-    <div class="flex justify-content-center text-4xl mt-5" *ngIf="cartInformationList.length == 0">
+    <div class="flex justify-content-center text-4xl mt-5" *ngIf="orderStateService.state.orderEntityCount == 0">
       No orders
     </div>
-    <div *ngIf="cartInformationList.length > 0" class="flex flex-column overflow-auto" style="max-height: 66vh">
-      <cart-card *ngFor="let cartInformation of cartInformationList"
+    <div *ngIf="orderStateService.state.orderEntityCount > 0" class="flex flex-column overflow-auto" style="max-height: 66vh">
+      <cart-card *ngFor="let cartInformation of orderStateService.state.orderEntityInformation"
                  [cartInformation]="cartInformation"
-                 (removeEntityEvent)="removeEntityFromOrder(cartInformation.orderEntityId)">
+                 (removeEntityEvent)="orderStateService.removeOrderEntity(cartInformation.orderEntityId)">
       </cart-card>
     </div>
   </div>
 
   <div class="footer">
-    <p-button *ngIf="cartInformationList.length == 0" (click)="continueShopping()" label="Go to shop" styleClass="bg-primary-800 w-full uppercase mt-2"></p-button>
+    <p-button *ngIf="orderStateService.state.orderEntityCount == 0" (click)="continueShopping()" label="Go to shop" styleClass="bg-primary-800 w-full uppercase mt-2"></p-button>
 
-    <div *ngIf="cartInformationList.length > 0">
+    <div *ngIf="orderStateService.state.orderEntityCount > 0">
       <div class="flex justify-content-between text-total-price">
         <span class="">Total</span>
-        <span>{{UiHelper.FormatCurrency(order.totalPrice)}}</span>
+        <span>{{UiHelper.FormatCurrency(orderStateService.state.order.totalPrice)}}</span>
       </div>
       <p-button (click)="continueShopping()" label="Continue shopping" styleClass="bg-primary-800 w-full uppercase mt-2"></p-button>
       <p-button label="Buy" styleClass="p-button-outlined p-button-secondary w-full uppercase mt-2"></p-button>
