--- a/FCSeafood-Angular/src/app/modules/components/header/header.component.html
+++ b/FCSeafood-Angular/src/app/modules/components/header/header.component.html
@@ -13,7 +13,7 @@
   <div class="header-block w-2 p-4">
     <p-button (onClick)="showCartPopup()" styleClass="p-button-text"
               pTooltip="Cart" tooltipPosition="bottom">
-      <i class="pi pi-shopping-cart" pBadge value="2"></i>
+      <i class="pi pi-shopping-cart" pBadge [value]="this.orderStateService.state.orderEntityCount.toString()"></i>
     </p-button>
 
     <p-button (onClick)="showSignInPopup()" styleClass="p-button-text"
