--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item/item.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item/item.component.html
@@ -34,7 +34,7 @@
 
       <div class="flex align-items-center">
         <span class="p-float-label">
-          <p-inputNumber label="test" inputId="integeronly"></p-inputNumber>
+          <p-inputNumber #quantityValue label="test" inputId="integeronly"></p-inputNumber>
           <label [innerText]="isKgQuantity ? 'Quantity of kg' : 'Quantity of g'"></label>
         </span>
         <p-toggleButton [(ngModel)]="isKgQuantity" onLabel="Kg" offLabel="g"></p-toggleButton>
@@ -42,7 +42,7 @@
     </div>
 
     <div class="flex flex-wrap mt-3">
-      <p-button label="Add to cart" class="col" styleClass="p-button-rounded w-full uppercase"></p-button>
+      <p-button (click)="addToCart()" label="Add to cart" class="col" styleClass="p-button-rounded w-full uppercase"></p-button>
       <p-button label="Shop now" class="col-5" styleClass="p-button-outlined p-button-rounded w-full uppercase"></p-button>
     </div>
 
