--- a/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item/item.component.html
+++ b/FCSeafood-Angular/src/app/modules/pages/shop/shop-content/item/item.component.html
@@ -5,28 +5,35 @@
       <img [src]="item.imagePath" style="width: 570px; height: 420px" alt="">
     </div>
 
-    <div>
+    <div class="flex justify-content-between align-items-center mt-2">
       <span class="reviews-text">Reviews</span>
-      <div class="flex justify-content-end">
-        <p-rating [cancel]="false"></p-rating>
-      </div>
+      <div class="flex align-items-center">
+        <i class="pi pi-thumbs-down"></i>
+        <span class="item-rating">{{dislikeCount}}</span>
 
-      <p-divider></p-divider>
+        <i class="pi pi-thumbs-up ml-2"></i>
+        <span class="item-rating">{{likeCount}}</span>
+      </div>
     </div>
+    <p-divider></p-divider>
   </div>
 
   <div class="mx-3" style="max-width: 670px">
     <div class="flex justify-content-end">
-      <p-button pTooltip="Add to compare filled" class="absolute" styleClass="p-button-text">
+      <p-button class="absolute" styleClass="p-button-text"
+                pTooltip="Add to compare filled"
+                tooltipPosition="left">
         <img alt="" ngSrc="assets/icons/filled-compare.svg" height="20" width="24">
       </p-button>
     </div>
 
-    <div class="item-category my-4">{{item.category.name}}</div>
+    <div class="item-category">{{item.category.name}}, {{item.subcategory.name}}</div>
 
-    <div class="item-name">{{item.name}}</div>
+    <div class="item-name mt-2">{{item.name}}</div>
 
-    <div class="item-description mt-2">{{item.description}}</div>
+    <p-scrollPanel [style]="{ width: '100%', 'max-height': '260px' }" styleClass="p-scrollpanel-content">
+      <div class="item-description mt-2">{{item.description}}</div>
+    </p-scrollPanel>
 
     <div class="flex justify-content-between align-items-center my-4">
       <div class="item-price">{{UiHelper.FormatCurrency(item.price)}}/kg</div>
